# QtSimpleCalculator

./: CMakeLists.txt  ShittyCalculator.pro
App/: App.pri  App.pro  CMakeLists.txt  calculatorlogic.cpp  calculatorlogic.h  main.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
AppQtTests/: AppQtTests.pro  CMakeLists.txt  tst_testcalculator.cpp
